--- a/.github/workflows/PublishNugetPackage.yml
+++ b/.github/workflows/PublishNugetPackage.yml
@@ -4,6 +4,7 @@ on:
   push:
     tags:        
       - v*.*.**
+    branches: [ main ]
 
 jobs:
   publish-with-build:
@@ -17,7 +18,7 @@ jobs:
       with:
         dotnet-version: 6.0.x
     - name: build
-      run: dotnet build -c Release
+      run: ls && dotnet build -c Release
     - name: pack
       run: dotnet pack -c Release -o ./output
     - name: push package
